# llm-match-pro

./: .gitignore  Dockerfile  Makefile  README.md  README_EN.md  README_ZH_TW.md  design.md  pyproject.toml  requirements-dev.txt  requirements.txt
llm_match_pro/: __init__.py  cli.py  web.py
llm_match_pro/config/: settings.py
llm_match_pro/engine/: __init__.py  recommender.py  scorer.py
llm_match_pro/hardware/: __init__.py  detector.py
llm_match_pro/models/: __init__.py  database.py  estimator.py
llm_match_pro/utils/: __init__.py  helpers.py
tests/: test_engine.py  test_hardware.py  test_models.py
