[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-match-pro"
version = "1.0.0"
description = "智能本地LLM硬件匹配与推荐引擎 - Smart Local LLM Hardware Matching & Recommendation Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gitstq", email = "gitstq@example.com"}
]
keywords = ["llm", "local-ai", "gpu", "hardware", "recommendation", "chatglm", "deepseek", "qwen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psutil>=5.9.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.0.0",
]
nvidia = [
    "pynvml>=11.5.0",
]

[project.scripts]
llm-match-pro = "llm_match_pro.cli:main"
llm-match-web = "llm_match_pro.web:main"

[project.urls]
Homepage = "https://github.com/gitstq/llm-match-pro"
Repository = "https://github.com/gitstq/llm-match-pro"
Issues = "https://github.com/gitstq/llm-match-pro/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_match_pro*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
